--- a/simple-clock/index.html
+++ b/simple-clock/index.html
@@ -4,11 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>digital clock</title>
 </head>
 
 <body>
+    <div id="clock">
+        <div class="hour-num three">3</div>
+        <div class="hour-num six">6</div>
+        <div class="hour-num nine">9</div>
+        <div class="hour-num twelve">12</div>
+        <div class="center"></div>
+        <div class="hour-hand"></div>
+        <div class="minute-hand"></div>
+        <div class="second-hand"></div>
+    </div>
 
+    <script src="./script.js"></script>
 </body>
 
 </html>
